// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExerciseView golden render > renders compound from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Der, die oder das? Der Artikel kommt vom letzten Teil!
    </p>
    <div
      class="flex justify-center"
    >
      <div
        class="space-y-2 text-center"
      >
        <p
          class="text-center font-display text-3xl font-bold text-ink"
        >
          Holztreppe
        </p>
        <div
          class="flex flex-wrap items-center justify-center gap-1.5"
        >
          <span
            class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
          >
            Holz
          </span>
          <span
            class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
          >
            Treppe
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          der
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          die
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          das
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders family from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Welches Wort gehört zur Familie „fahr-"?
    </p>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Fahrrad
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Wohnung
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Zahlung
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders findvowel from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Wo steckt der Selbstlaut? Tippe ihn an!
    </p>
    <div
      class="flex justify-center"
    >
      <p
        class="text-center font-display text-3xl font-bold text-ink"
      >
        Schal
      </p>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          S
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          c
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          h
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          a
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          l
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders fixvowel from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Ersetze den Selbstlaut durch „a" – welches echte Wort entsteht?
    </p>
    <div
      class="flex justify-center"
    >
      <p
        class="text-center font-display text-3xl font-bold text-ink"
      >
        Hend
      </p>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Hand
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Ball
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Wand
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders insertvowel from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Welcher Selbstlaut fehlt?
    </p>
    <div
      class="flex justify-center"
    >
      <p
        class="text-center font-display text-3xl font-bold text-ink"
      >
        B_ch
      </p>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          u
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          e
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          i
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders length from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Klingt „ie" hier kurz oder lang? Sprich laut vor!
    </p>
    <div>
      <div
        class="space-y-5"
      >
        <div
          class="flex items-center justify-center rounded-2xl bg-teal-tint px-8 py-6"
        >
          <p
            class="text-center font-display text-3xl font-bold text-ink"
          >
            liegt
          </p>
        </div>
        <div
          class="flex gap-3"
        >
          <button
            class="flex flex-1 flex-col items-center justify-center gap-2 rounded-2xl px-4 py-6 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.97] bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-left h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m15 18-6-6 6-6"
              />
            </svg>
            Kurz
          </button>
          <button
            class="flex flex-1 flex-col items-center justify-center gap-2 rounded-2xl px-4 py-6 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.97] bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
            Lang
          </button>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders paircheck from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Schau genau hin: Sind die beiden gleich?
    </p>
    <div>
      <div
        class="space-y-5"
      >
        <div
          class="flex items-center justify-center rounded-2xl bg-teal-tint px-8 py-6"
        >
          <div
            class="flex flex-wrap items-center justify-center gap-1.5"
          >
            <span
              class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
            >
              pla
            </span>
            <span
              class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
            >
              pla
            </span>
          </div>
        </div>
        <div
          class="flex gap-3"
        >
          <button
            class="flex flex-1 flex-col items-center justify-center gap-2 rounded-2xl px-4 py-6 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.97] bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-left h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m15 18-6-6 6-6"
              />
            </svg>
            Gleich
          </button>
          <button
            class="flex flex-1 flex-col items-center justify-center gap-2 rounded-2xl px-4 py-6 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.97] bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
            Anders
          </button>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders pickword from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Nur ein Wort ist echt. Tippe es an!
    </p>
    <div>
      <div
        class="grid gap-3 grid-cols-2"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Berof
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Berit
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Beref
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Beruf
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Berat
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Berif
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders raster from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Zerlege das Wort: Anfang · Vokal · Ende. Der Selbstlaut kommt in die Sonne!
    </p>
    <div
      class="flex justify-center"
    >
      <p
        class="text-center font-display text-3xl font-bold text-ink"
      >
        Schnur
      </p>
    </div>
    <div>
      <div
        class="space-y-5"
      >
        <div
          class="flex items-center justify-center gap-3"
        >
          <div
            aria-label="Anfang"
            class="flex w-24 flex-col items-center gap-1"
          >
            <span
              class="min-h-9 font-display text-2xl font-bold text-ink"
            />
            <span
              class="h-1 w-full rounded-full bg-ink/20"
            />
          </div>
          <div
            aria-label="Vokal"
            class="flex h-20 w-20 shrink-0 items-center justify-center rounded-full ring-4 transition bg-amber-300 ring-amber-400"
          />
          <div
            aria-label="Ende"
            class="flex w-24 flex-col items-center gap-1"
          >
            <span
              class="min-h-9 font-display text-2xl font-bold text-ink"
            />
            <span
              class="h-1 w-full rounded-full bg-ink/20"
            />
          </div>
        </div>
        <div
          class="flex flex-wrap justify-center gap-2"
        >
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            u
          </button>
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            r
          </button>
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            Schn
          </button>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders realword from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Echtes Wort oder Quatschwort? Lies laut vor!
    </p>
    <div>
      <div
        class="space-y-5"
      >
        <div
          class="flex items-center justify-center rounded-2xl bg-teal-tint px-8 py-6"
        >
          <p
            class="text-center font-display text-3xl font-bold text-ink"
          >
            Tür
          </p>
        </div>
        <div
          class="flex gap-3"
        >
          <button
            class="flex flex-1 flex-col items-center justify-center gap-2 rounded-2xl px-4 py-6 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.97] bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-left h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m15 18-6-6 6-6"
              />
            </svg>
            Echtes Wort
          </button>
          <button
            class="flex flex-1 flex-col items-center justify-center gap-2 rounded-2xl px-4 py-6 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.97] bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
            Quatschwort
          </button>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders sentencefix from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Ein Wort ist falsch geschrieben. Tippe es an!
    </p>
    <div>
      <div
        class="flex flex-wrap items-baseline justify-center gap-x-2 gap-y-3 rounded-2xl bg-white px-6 py-8 shadow-sm ring-1 ring-black/5"
      >
        <button
          class="rounded-xl px-3 py-1.5 font-display text-2xl font-bold transition active:scale-95 text-ink hover:bg-teal-tint"
          type="button"
        >
          Die
        </button>
        <button
          class="rounded-xl px-3 py-1.5 font-display text-2xl font-bold transition active:scale-95 text-ink hover:bg-teal-tint"
          type="button"
        >
          Schöle
        </button>
        <button
          class="rounded-xl px-3 py-1.5 font-display text-2xl font-bold transition active:scale-95 text-ink hover:bg-teal-tint"
          type="button"
        >
          ist
        </button>
        <button
          class="rounded-xl px-3 py-1.5 font-display text-2xl font-bold transition active:scale-95 text-ink hover:bg-teal-tint"
          type="button"
        >
          aus.
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders swapvowel from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Tausche den Selbstlaut – welcher macht ein neues echtes Wort?
    </p>
    <div
      class="flex justify-center"
    >
      <p
        class="text-center font-display text-3xl font-bold text-ink"
      >
        Hand
      </p>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          u
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          o
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          i
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders sylarrange from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Lies das Wort und baue es aus den Silben nach. Sprich mit!
    </p>
    <div
      class="flex justify-center"
    >
      <p
        class="text-center font-display text-3xl font-bold text-ink"
      >
        Gleichgewicht
      </p>
    </div>
    <div>
      <div
        class="space-y-4"
      >
        <div
          class="flex min-h-14 flex-wrap items-center justify-center gap-2 rounded-2xl bg-black/[0.03] p-3"
        >
          <span
            class="text-sm text-ink-soft/60"
          >
            …
          </span>
        </div>
        <div
          class="flex flex-wrap justify-center gap-2"
        >
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            ge
          </button>
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            wicht
          </button>
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            Gleich
          </button>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders sylvalid from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Kann diese Silbe klingen? Sie braucht einen Selbstlaut!
    </p>
    <div>
      <div
        class="space-y-5"
      >
        <div
          class="flex items-center justify-center rounded-2xl bg-teal-tint px-8 py-6"
        >
          <p
            class="text-center font-display text-3xl font-bold text-ink"
          >
            pan
          </p>
        </div>
        <div
          class="flex gap-3"
        >
          <button
            class="flex flex-1 flex-col items-center justify-center gap-2 rounded-2xl px-4 py-6 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.97] bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-left h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m15 18-6-6 6-6"
              />
            </svg>
            Ja, sie klingt
          </button>
          <button
            class="flex flex-1 flex-col items-center justify-center gap-2 rounded-2xl px-4 py-6 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.97] bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
            Nein
          </button>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;
